Sections criadas no main e style aplicado

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <li class="nav-item"><a href="#">Sobre</a></li>
                 <li class="nav-item"><a href="">Data</a></li>
                 <li class="nav-item"><a href="#">Inscrição do Evento</a></li>
-                <li class="nav-item"><a href="">Contato</a></li>
             </ul>
             <div class="menu">
                 <span class="bar"></span>
@@ -25,9 +24,31 @@
         </nav>
     </header>
     <main>
+
         <section class="home">
-          
+            <div class="home-text">
+                <h4 class="text-h4">Bem vindo ao GTX eSports</h4>
+                <h1 class="text-h1">O evento mais esperado do ano</h1>
+                <p>Um campeonato incrível de jogos eletrônicos que vai levar sua diversão para o proximo nível !</p>
+                <a href="#" class="home-btn">Inscrever-se</a>
+            </div>
+            <div class="home-img">
+                  <img src="./img/games1.jpg" alt="videogame">
+            </div>
         </section>
+
+        <section class="home2">
+            <div class="home-img2">
+                <img src="./img/games3.jpg" alt="videogame">
+          </div>
+            <div class="home-text2">
+                <h4 class="text-h4">Quando ocorrerá o GTX eSports ?</h4>
+                <h1 class="text-h1">Sua diversão está próxima !</h1>
+                <p>O campeonato de jogos eletrônicos irá ocorrer no dia 27/12/2022 e conta com jogos exclusivos !</p>
+                <a href="#" class="home-btn">Inscrever-se</a>
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
