Rodapé criado e aplicado responsividade

--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
         
     </section>
 </main>
-
+     <footer>
+        <p>Criado por: <a href="https://github.com/AlissonCastroFeitoza">Alisson Castro &copy;</a></p>
+     </footer>
     <script src="./js/script.js"></script>
 </body>
 </html>
